change churchkela to georgian delicacy

--- a/src/translation/en/translation.json
+++ b/src/translation/en/translation.json
@@ -34,7 +34,7 @@
     },
     {
       "id": 19,
-      "navTitle": "Churchkhela"
+      "navTitle": "Georgian delicacy "
     }
   ],
   "productDescription": [
@@ -83,10 +83,10 @@
     },
     {
       "id": 7,
-      "img": "../../images/churchkela.png",
-      "heading": "Churchkhela – Georgian delicacy ",
+      "img": "../../images/walnut.jpg",
+      "heading": "Georgian delicacy (traditional name-churchkhela) ",
       "subheading": "Improved method of making",
-      "paragraph": "Characteristics: prevention of the formation of 5-hydroxymethylfurfural (HMF) and oxidation of phenolic compounds during production; accelerated thickening of grape juice (Badagi) at low temperature and obtaining an environmentally safe product by conditioning its mixture with wheat flour hydrolysate; reduction of the total duration of the process from 165 to 28-30 hours; improved economic indicators..."
+      "paragraph": "Characteristics: prevention of the formation of 5-hydroxymethylfurfural (HMF) and oxidation of phenolic compounds during production; accelerated thickening of grape juice at low temperature and obtaining an environmentally safe product by conditioning its mixture with wheat flour hydrolysate, after- with dry ground fruits;  reduction of the total ..."
     }
   ],
 
@@ -169,6 +169,8 @@
       "paragraph4": "Advantages of the proposed method: cheapness (the price of sugar is 80-85% of the cost of syrup); the content of 5-HMF in invert syrup does not exceed 5 mg/kg, unlike honey, in which this substance is contained in an amount of 20 mg / kg (at best); Bees can be fed with invert syrup at any time of the year, without causing exhaustion and burnout worker bees; The heater required for the industrial production of invert syrup runs on both gas and electricity, depending on the cost of the energy source. The source of enzyme β- Fructofuranosidase is a preparation developed by us. A package is enough to process 50 kg of dry sugar, its cost, excluding transportation, is USD 2.7.In addition to the above information, the author has posted materials on the Internet in Georgian, English and Russian on the following innovative measures for interested readers: Invertase (sucrase, β-fructofuranosidase) under the trade name “Hydrolytic Agent”; Determining the naturalness of honey (by express method); Candy- paste feed; Making bee bread, an environmentally friendly product, without beehive (honeycombs); Environmentally sound technologies for the production of jams and purees; Improved method of making Churchkhela – Georgian delicacy.",
       "img1": "../../images/invertSugar1.png",
       "img2": "../../images/invertSugar.png",
+      "caption1": "Hydrolysis agent",
+      "caption2": "Invert syrup ",
       "alt1": "hidroliz agent",
       "alt2": "invert sugar"
     },
@@ -183,7 +185,7 @@
       "paragraph4": "The finished  Hydrolytic Agent is used depending on the goals that the user is trying to achieve: obtaining liquid invert syrup or a paste food (candy). Therefore, the formulation of products and the dosage of Hydrolytic Agent are different, which is described in the technology of making these products as needed.      In addition to the above information, the author has posted materials on the Internet in Georgian, English and Russian on the following innovative measures for interested readers: Invert sugar syrup for bees; Determining the naturalness of honey (by express method); Candy- paste feed; Making bee bread, an environmentally friendly product, without beehive (honeycombs); Environmentally sound technologies for the production of jams and purees; Improved method of making Churchkhela – Georgian delicacy.      ",
       "img1": "../../images/invertase.jpg",
       "img2": "../../images/rotaryMixer.png",
-      "caption1": "Hydrolysis agent",
+      "caption1": "Invertase",
       "caption2": "Rotary mixer",
       "alt1": "Invertase",
       "alt2": "Rotary mixer"
@@ -238,7 +240,7 @@
       "caption2": " Bee bread",
       "caption3": "Bee bread dryer",
       "caption4": "Vacuum camera  with pump",
-      "caption5": "",
+      "caption5": "Bee bread",
       "alt1": "Bee Pollen",
       "alt2": "Bee Bread",
       "alt3": "beepollen dryer",
@@ -277,25 +279,31 @@
 
     {
       "id": 40,
-      "title": "  Improved method of making Churchkhela – Georgian delicacy",
+      "title": "    Georgian delicacy (traditional name-churchkhela)-improved method of making",
 
-      "paragraph1": "Materials: grapes, well ripe, without sour taste; pH - not less than 4, the initial concentration of Badagi- not less than 20wt.%, color- any; wheat or corn flour of Grade 1, with a moisture content of 12-13%; food products (walnuts, hazelnuts, almonds, raisins, etc.) as ingredients of Churchkhela with a moisture content of no more than 8-10 wt.%, threaded onto a string, with a special loop for hanging; α-Amylase, thermostable,  with established activity, with or without excipients, stable at 84-86°C; sulfuric anhydride; drinking water, clean.",
-      "paragraph2": "Equipment: grape crusher -destemmer of any construction; centrifuge with filter cloth – for mechanical cleaning of Badagi; descaling with an antioxidant (e.g. sulfuric anhydride); double- walled metal vessel, open, inner container - stainless metal, with heater and bubbler; compressor with oil mist trap; drying oven with internal intensive aeration; refractometer; packaging bags with holes  and a transparent upper window. ",
-      "paragraph3": "Preparation of Badagi. The process begins with the harvesting of grapes, which are then cleaned, destemmed, crushed, filtered, the sulfuric anhydride is added (1g / 10 L Badagi), the container is not completely  filled and kept for 36 hours, the juice is decanted into a double- walled boiler, the heater is heated to 70-75 °C, and with the help of heated air supplied from the compressor (through a bubbler), Badagi treatment begins, the temperature of which does not exceed 60°C as a result of intensive steam release from Badagi, which prevents the formation of HMF. The process is completed when the concentration of Badagi is at least 80% by weight. The concentrate can be stored in natural conditions, without sterilization, preferably in a place protected from light, in the presence of nitrogen gas or carbon dioxide. ",
-      "paragraph4": "Preparation of a set of dried fruits. Humidity is regulated at 60-65°C. The further procedure (threading) is completed by observing the necessary dimensions (length, diameter).\nWheat flour hydrolysis, concentration, Churchkhela strings preparation and drying. Wheat flour is mixed with water in a double- walled vessel in a mass ratio of 3:7 (based on dry matter). α-Amylase is added in an amount of 300 mg per kg of flour, the temperature of the mixture rises to 84-86°C with constant stirring,  at this temperature the starch is liquefied, then it is heated to 88-90 °C and the mixture begins to thicken with air heated to 80-85°C. At the end of this process, the concentration of the thickened hydrolysate should be 43-45% by weight. Next, the water in the vessel jacket is cooled until its temperature in the dough (for Tatara) drops to 60° C and a concentrated Badagi is added in an amount of 9-10% of the mass of the finished flour hydrolysate. The consistency of the mixture is assessed by the morphological stability of Churchkhela string. Churchkhela strings are transferred to the drying oven with hooks. They are gradually dried to reach 42-450C, bringing the product to a constant weight. The drying process takes up to 15 hours. The dried product is cooled, packaged and labeled.",
-      "paragraph5": "Advantages of the proposed technology: ecological purity (does not contain HMF and no browning– phenolic compound oxidation occurs); compared with traditional production, the working time is reduced from 165 hours to 28-30 hours; improved presentation of the finished product (color, smell, taste, plasticity) and economic effect.\nIn addition to the above information, the author has posted materials on the Internet in Georgian, English and Russian on the following innovative measures for interested readers: Invert sugar syrup for bees and foodstuffs; Invertase (sucrase, β-fructofuranosidase) under the trade name “Hydrolytic Agent”; Determining the naturalness of honey (by express method); Candy-paste feed; Making bee bread, an environmentally friendly product, without beehive (honeycombs);   Jams and purees- environmentally sound technologies for the production.",
-      "img1": "../../images/grape1.png",
+      "paragraph1": "Materials: grapes, well ripe, without sour taste; pH - not less than 4, the initial concentration of grape juice- not less than 20wt.%, color- any; wheat or corn flour  with a moisture content of 12-13%; food products (walnuts, hazelnuts, almonds, peanuts, etc.) as ingredients of delicacy with a moisture content of no more than 8-10 wt.%, ground; α-Amylase, thermostable,  with established activity, with or without excipients, stable at 84-86°C; sulfuric anhydride; drinking water, clean.",
+      "paragraph2": "Equipment: grape crusher -destemmer of any construction; centrifuge with filter cloth – for mechanical cleaning of grape juice; descaling with an antioxidant (e.g. sulfuric anhydride); double- walled metal vessel, open, inner container - stainless metal, with heater and bubbler; compressor with oil mist trap; drying oven with internal intensive aeration; refractometer; packaging jars of transparent glass or food plastic. ",
+      "paragraph3": "Preparation of grape juice. The process begins with the harvesting of grapes, which are then cleaned, destemmed, crushed, filtered, the sulfuric anhydride is added (1g / 10 L juice), the container is not completely  filled and kept for 36 hours, the juice is decanted into a double- walled boiler, the heater is heated to 70-75 °C, and with the help of heated air  juice treatment begins, the temperature of which does not exceed 60°C as a result of intensive steam release from grape juice, which prevents the formation of HMF. The process is completed when the concentration of this material is at least 80% by weight. The concentrate can be stored in natural conditions, without sterilization, preferably in a place protected from light, in the presence of  carbon dioxide. ",
+      "paragraph4": "Preparation of a set of dried fruits. Humidity is regulated at 60-65°C. The further procedure is completed by milling and cleaning out seed-coat, if is possible (peanuts)..",
+      "paragraph5": "Wheat flour hydrolysis, concentration, delicacy preparing and packing. Wheat flour is mixed with water in a double- walled vessel in a mass ratio of 3:7 (based on dry matter). α-Amylase is added in an amount of 300 mg per kg of flour, the temperature of the mixture rises to 84-86°C with constant stirring,  at this temperature the starch is liquefied, then it is heated to 88-90 °C and the mixture begins to thicken with air heated to 80-85°C. At the end of this process, the concentration of the thickened hydrolysate should be 43-45% by weight. Next, the water in the vessel jacket is cooled until its temperature in the dough  drops to 60° C and a concentrated grape juice is added in an amount of 9-10% of the mass of the finished flour hydrolysate, after- necessary ground fruit  in an amount of 30%, carefully is mixed and transferred on the griddles of dryer at the temperature 45-500C. During the drying process dough for delicacy periodically is turned over to accelerate dehydration                                                                                                                                                                                                                                                                                                                to a constant weight (content of water- no more 15 mas.%, specific weight- no less1,32g/cm3). The dry  cooled product is placed into the jars for keeping, where an atmospheric air is changed  by carbon dioxide,  packaged and labeled. Advantages of the proposed technology: ecological purity (does not contain HMF and no browning– phenolic compound oxidation occurs); compared with traditional production, the working time is reduced from 165 hours to 28-30 hours; improved properties of the finished product (color, smell, taste, plasticity) and economic effect.In addition to the above information, the author has posted materials on the Internet in Georgian, English and Russian on the following innovative measures for interested readers: Invert sugar syrup for bees and foodstuffs; Invertase (sucrase, β-fructofuranosidase) under the trade name “Hydrolytic Agent”; Determining the naturalness of honey (by express method); Candy-paste feed consisting of exclusively monosacharides; Making bee bread, an environmentally friendly product, without beehive (honeycombs);   Jams and purees- environmentally sound technologies for the production.",
+      "img1": "../../images/grape1.jpg",
       "img2": "../../images/grape2.png",
       "img3": "../../images/grape3.png",
-      "img4": "../../images/grape4.png",
+      "img4": "../../images/almond.jpg",
+      "img5": "../../images/walnut.jpg",
+      "img6": "../../images/peanut.jpg",
       "caption1": "Concentrated (78.5-81% by weight) samples of grape mash: 2-new technology, 3-oxidized (discolored)",
-      "caption2": "Obtained by traditional technology (positive)",
-      "caption3": "Made with new technology (negative)",
-      "caption4": "a) Churchkhela made by traditional technology; b) Sample prepared with new technology",
+      "caption2": "Content of HMF Fiches test (positive)",
+      "caption3": "Content of HMF made by new technology (negative)",
+      "caption4": "Delicacy with almond",
+      "caption5": "Delicacy with walnut",
+      "caption6": "Delicacy with peanut",
       "alt1": "Cherry jam ",
       "alt2": "traditional technology ",
       "alt3": "new technology",
-      "alt4": "Churchkhela"
+      "alt4": "almond delicacy",
+      "alt5": "walnut delicacy",
+      "alt6": "peanut delicacy"
     }
   ]
 }
