--- a/src/translation/ka/translation.json
+++ b/src/translation/ka/translation.json
@@ -33,7 +33,7 @@
     },
     {
       "id": 19,
-      "navTitle": "ჩურჩხელა"
+      "navTitle": "ქართული დელიკატესი"
     }
   ],
   "productDescription": [
@@ -79,8 +79,9 @@
     },
     {
       "id": 7,
-      "img": "../../images/churchkela.png",
-      "heading": "ჩურჩხლის - ქართული დელიკატესის-მომზადების გაუმჯობესებული ტექნოლოგია ",
+      "img": "../../images/walnut.jpg",
+      "heading": "ქართული დელიკატესის მომზადების გაუმჯობესებული ტექნოლოგია   ",
+      "subheading": "ტექნოლოგია  (ტრადიციული ჩურჩხლის წარმოების სანაცვლოდ)",
       "paragraph": "დამახასიათებელი თავისებურებანი: მომზადების დროს 5-ჰიდროქსიმეთილფურფურალის (ჰმფ) წარმოქმნისა და ფენოლური ნაერთების დაჟანგვის თავიდან აცილება; ყურძნის ბადაგის დაბალ ტემპერატურაზე შესქელების დაჩქარებული რეჟიმი და ხორბლის ფქვილის ჰიდროლზატთან მისი ნაზავის კონდიცირებით ეკოლოგიურად უსაფრთხო პროდუქტის მიღება; პროცესის საერთო ხანგრძლივობის შემცირება 165-დან 28-30 საათამდე; გაუმჯობესებული ეკონომიკური მაჩვენებლები..."
     }
   ],
@@ -162,6 +163,8 @@
       "paragraph4": "შემოთავაზებული ხერხის უპირატესობანი: სიიაფე (სიროფის თვითღირებულებაში შაქრის ფასი შეადგენს 80-85%-ს); ინვერსიულ სიროფში ჯანმრთელობისათვის მავნე 5-ჰმფ-ს შემცველობა არ აღემატება 5მგ/კგ-ს თაფლისაგან განსხვავებით, რომელიც ამ ნივთიერებას შეიცავს 20 მგ/კგ -ის ოდენობით (უკეთეს შემთხვევაში); ინვერსიული სიროფით ფუტკრის კვება შეიძლება წლის ნებისმიერ დროს, რაც არ იწვევს მუშა ფუტკრის ცვეთას და ოჯახის დასუსტებას; ინვერსიული სიროფის სამრეწველო მასშტაბით წარმოებისათვის საჭირო გამაცხელებელი მუშაობს როგორც გაზზე, ისე ელექტროენერგიით, რაც დამოკიდებულია ენერგიის წყაროს ფასზე.ფერმენტ β -ფრუქტოფურანოზიდაზის წყაროა ჩვენს მიერ შემუშავებული პრეპარატი. ერთეული შეფუთვა საკმარისა 50 კგ მშრალი შაქრის დასამუშავებლად, ხოლო მისი ღირებულება შეადგენს 2,7 $ ტრანსპორტირების გარეშე. გარდა ზემოთმოტანილი ინფორმაციისა, ავტორის მიერ დაინტერესებული მკითხველისათვის ინტერნეტში ქართულ, ინგლისურ და რუსულ ენებზე განთავსებულია მასალები შემდეგი ინოვაციური ღონისძიებების შესახებ: ინვერტაზა (საქარაზა, β -ფრუქტოფურანოზიდაზა) კომერციული სახელწოდებით „ჰიდროლიზ-აგენტი“; თაფლის ნატურალობის დადგენა (ექსპრესული მეთოდით);  კანდი- ცომისებური საკვებიფუტკრისათვის;  ჭეოს ეკოლოგიურად სუფთა პროდუქტის წარმოება სკის (ფიჭები) გარეშე;  მურაბებისა და ხილფაფების წარმოების ეკოლოგიურად უსაფრთხო ტექნოლოგია;  ჩურჩხლის-ქართული დელიკატესის- მომზადების გაუმჯობესებული ხერხი.",
       "img1": "../../images/invertSugar1.png",
       "img2": "../../images/invertSugar.png",
+      "caption1": "ჰიდროლიზ-აგენტი",
+      "caption2": "ინვერსიული სიროფი",
       "alt1": "hidroliz agent",
       "alt2": "invert sugar"
     },
@@ -176,7 +179,7 @@
       "paragraph4": "გარდა ზემოთმოტანილი ინფორმაციისა, ავტორის მიერ დაინტერესებული მკითხველისათვის ქართულ, ინგლისურ და რუსულ ენებზე ინტერნეტში განთავსებულია მასალები შემდეგი ინოვაციური ღონისძიებების შესახებ: ინვერსიული სიროფი ფუტკრის საკვებად და სასურსათოდ; თაფლის ნატურალობის დადგენა ექსპრესული მეთოდით; კანდი- ცომისებური საკვები ფუტკრისათვის; ჭეოს ეკოლოგიურად სუფთა პროდუქტის წარმოება სკის გარეშე; მურაბებისა და ხილფაფების წარმოების ეკოლოგიურად უსაფრთხო ხერხი; ჩურჩხლის-ქართული დელიკატესის- მომზადების გაუმჯობესებული ტექნოლოგია.",
       "img1": "../../images/invertase.jpg",
       "img2": "../../images/rotaryMixer.png",
-      "caption1": "ჰიდროლიზ-აგენტი",
+      "caption1": "ინვერტაზა",
       "caption2": "როტაციული ამრევი",
       "alt1": "Invertase",
       "alt2": "Rotary mixer"
@@ -232,7 +235,7 @@
       "caption2": "ჭეო",
       "caption3": "",
       "caption4": "ვაკუუმკამერა ტუმბოსთან ერთად",
-      "caption5": "",
+      "caption5": "ჭეო",
       "alt1": "Bee Pollen",
       "alt2": "Bee Bread",
       "alt3": "beepollen dryer",
@@ -270,25 +273,31 @@
 
     {
       "id": 40,
-      "title": "ჩურჩხლის ეკოლოგიურად უსაფრთხო  პროდუქტის წარმოების ხერხი",
+      "title": "ქართული  დელიკატესის ეკოლოგიურად უსაფრთხო   წარმოების ხერხი",
 
-      "paragraph1": "მასალები:  ყურძენი კარგად მომწიფებული, მჟავიანობის შეგრძნების გარეშე;  pH  არა ნაკლებ 4-სა, ბადაგის საწყისი კონცენტრაცია-არა ნაკლებ 20 მას.%-სა, ფერი -ნებისმიერი; ხორბლის ან სიმინდის ფქვილი, 1 ხარისხის, ტენიანობით 12-13%; საკვები პროდუქტები (ნიგოზი, თხილი, ნუში, ყურძნის ჩამიჩი და სხვ.) ჩურჩხლის შიგა კომპონენტებად, ტენიანობით არა უმეტეს 8-10 მას.%-სა, ძაფზე ასხმული, საკიდრით; თერმოსტაბილური α-ამილაზა, დადგენილი აქტიურობით, შემავსებელთან  ერთად  ან მის გარეშე, მდგრადი 84-860C პირობებში; გოგირდის ანჰიდრიდი; წყალი სასმელი, სუფთა.",
-      "paragraph2": "მოწყობილობა: მტევნისაგან კლერტის გასაცლელი და მარცვლის საწური - ნებისმიერი კონსტრუქციისა; ცენტრიფუგა მჭიდრო ქსოვილის ფილტრით- ბადაგის მექანიკური გაწმენდისათვის; ლექის მოცილება ანტიდამჟანგველით (მაგ., გოგირდის ანჰიდრიდი); ორტანიანი ლითონის ჭურჭელი, თავღია, შიგა ქვაბი-უჟანგავი ლითონის, გამათბობლით და ბარბოტერით; კომპრესორი ზეთის ორთქლის დამჭერით; საშრობი კარადა გაძლიერებული შიგა აერაციით, საკიდრებით; რეფრაქტომეტრი; შესაფუთად-სასურსათო დანიშნულების ტომსიკები ნასვრეტებით და გამჭვირვალე ზედა ფანჯრით.  ",
-      "paragraph3": "ყურძნის ბადაგის მომზადება. მოკრეფილ ყურძენს გარეცხავენ, მოაცლიან კლერტს, დაწურავენ და გაფილტრავენ, ამატებენ გოგირდის ანჰიდრიდს  (1გ/10ლ ბადაგზე), ჭურჭელს ავსებენ არასრულად და ინახავენ 36 საათს, ლექს აცლიან დეკანტაციით და წვენს გადაიტანენ ორტანიან ჭურჭელში, გამათბობელს აცხელებენ 70-750C-მდე  და კომპრესორიდან მოწოდებული გაცხელებული ჰაერით (ბარბოტერის გავლით)  იწყებენ ბადაგის დამუშავებას , რომელშიც ტემპერატურა არ აღემატება 600C ბადაგიდან ორთქლის ინტენსიური გამოყოფის შედეგად, რაც ჰმფ-ს  წარმოქმნას უშლის ხელს. პროცესი დამთავრებულია, თუ ბადაგის კონცენტრაცია 80 მას.%-ზე ნაკლები არ არის. კონცენტრატი შენახვადია ბუნებრივ პირობებში, სტერილიზაციის გარეშე, უმჯობესია სინათლისაგან დაცულ ადგილას, გაზობრივი  აზოტის ან ნახშირორჟანგის არეში. ",
-      "paragraph4": "საჩურჩხლე ნაკრების მომზადება მშრალი ხილეულისგან. ტენი მასში რეგულირდება 60-650C-ზე. შემდგომი ოპერაცია (ძაფზე აკინძვა) ხდება საჭირო გაბარიტების (სიგრძე, დიამეტრი) დაცვით.",
-      "paragraph5": "მარცვლის ფქვილის ჰიდროლიზი, კონცენტრირება,ჩურჩხლის მომზადება და შრობა. მარცვლის ფქვილი წყალთან ერთად მზადდება ორტანიან ჭურჭელში ამრევით 3:7- თან მასური შეფარდებით (მშრალი ნივთიერების გათვალისწინებით). α -ამილაზა ყოველ კგ ფქვილზე ემატება 300მგ-ის რაოდენობით, ნაზავის ტემპერატურას გამუდმებული მორევის პირობებში ზრდიან 84-860C-მდე,  ამ ტემპერატურაზე სახამებელს აცლიან გათხევადებას,  შემდგომ მას აცხელებენ  88-900C-მდე და იწყებენ ნარევის შესქელებას 80-850C-მდე  გაცხელებულიჰაერით. ამ პროცესის ბოლოს შესქელებული ჰიდროლიზატის კონცენტრაცია უნდა იყოს 43-45 მას.%. შემდგომ ჭურჭლის პერანგში არსებულ წყალს გააგრილებენ, რომ სათათარე ცომში იგი შემცირდეს 600C-მდე და ამატებენ კონცენტრირებულ ბადაგს  ფქვილის მზა ჰიდროლიზატის მასის 9-10%-ის რაოდენობით. ნარევის კონსისტენციას აფასებენ მასში ამოვლებული საჩურჩხლე ნაკრების მორფოლოგიური მდგრადობით. ჩურჩხელა გადააქვთ საშრობი კარადის შიგა საკიდრებზე. აქ იგი შრება საფეხურებრივად, რომ ბოლოს 42-450C-ს მიაღწიოს პროდუქტის მუდმივ მასამდე დაყვანით. შრობის პროცესის განხორციელებაზე იხარჯება 15 საათამდე. გამშრალ პროდუქტს გააგრილებენ,შეფუთავენ და ხდება მისი მარკირება.შემოთავაზებული ტექნოლოგიის უპირატესობანი: ეკოლოგიური სისუფთავე ( არ შეიცავს ჰმფ-ს და არ ხდება  მისი გამუქება-ფენოლური ნაერთების დაჟანგვა); ტრადიციულ ნამზადთან შედარებით დახარჯული სამუშაო  დრო 165 საათიდან მცირდება 28-30 საათამდე; უმჯობესდება სასაქონლო სახე (ფერი, სუნი, გემო, პლასტიკურობა) და ღონისძიების ეკონომიკური ეფექტი.გარდა ზემოთმოტანილი ინფორმაციისა, ავტორის მიერ დაინტერესებული მკითხველისათვის ინტერნეტში ქართულ, ინგლისურ და რუსულ ენებზე განთავსებულია მასალები შემდეგი ინოვაციური ღონისძიებების შესახებ:  ინვერსიული სიროფი ფუტკრისათვის; ინვერტაზა (საქარაზა, β -ფრუქტოფურანოზიდაზა) კომერციული სახელწოდებით „ჰიდროლიზ-აგენტი“; თაფლის ნატურალობის დადგენა (ექსპრესული მეთოდით);  კანდი- ცომისებური საკვები ფუტკრისათვის;  ჭეოს ეკოლოგიურად სუფთა პროდუქტის წარმოება სკის (ფიჭები) გარეშე;  მურაბებისა და ხილფაფების წარმოების ეკოლოგიურად უსაფრთხო ტექნოლოგია.",
-      "img1": "../../images/grape1.png",
+      "paragraph1": "მასალები:  ყურძენი კარგად მომწიფებული, მჟავიანობის შეგრძნების გარეშე;  pH  არა ნაკლებ 4-სა, ბადაგის საწყისი კონცენტრაცია-არა ნაკლებ 20 მას.%-სა, ფერი -ნებისმიერი; ხორბლის ან სიმინდის ფქვილი,  ტენიანობით 12-13%; დისპერგირებული საკვები პროდუქტები (ნიგოზი, თხილი, ნუში, არაქისი და სხვ.) დელიკატესის შიგა კომპონენტებად,  ნაზავის საერთო ტენიანობით  არა უმეტეს 15           მას.%-სა; თერმოსტაბილური α-ამილაზა, დადგენილი აქტიურობით, შემავსებელთან  ერთად  ან მის გარეშე, მდგრადი 84-860C პირობებში; გოგირდის ანჰიდრიდი; წყალი სასმელი, სუფთა.",
+      "paragraph2": "მოწყობილობა: მტევნისაგან კლერტის გასაცლელი და მარცვლის საწური - ნებისმიერი კონსტრუქციისა; ცენტრიფუგა მჭიდრო ქსოვილის ფილტრით- ბადაგის მექანიკური გაწმენდისათვის; ლექის მოცილება ანტიდამჟანგველით (მაგ., გოგირდის ანჰიდრიდი); ორტანიანი ლითონის ჭურჭელი, თავღია, შიგა ქვაბი-უჟანგავი ლითონის, გამათბობლით და ბარბოტერით; კომპრესორი ზეთის ორთქლის დამჭერით; საშრობი კარადა გაძლიერებული შიგა აერაციით; რეფრაქტომეტრი; შესაფუთად- მინის ან სასურსათო დანიშნულების პოლიეთილენის ჭურჭელი გამჭვირვალე, მჭიდროდ დახუფვადი. ",
+      "paragraph3": "ყურძნის ბადაგის მომზადება. მოკრეფილ ყურძენს გარეცხავენ, მოაცლიან კლერტს, დაწურავენ და გაფილტრავენ, ამატებენ გოგირდის ანჰიდრიდს  (1გ/10ლ ბადაგზე). ჭურჭელს ავსებენ არასრულად და ინახავენ 36 საათს, ლექს აცლიან დეკანტაციით და წვენს გადაიტანენ ორტანიან ჭურჭელში, გამათბობელს აცხელებენ 70-750C-მდე  და კომპრესორიდან მიწოდებული გაცხელებული ჰაერით (ბარბოტერის გავლით)  იწყებენ ბადაგის დამუშავებას , რომელშიც ტემპერატურა არ აღემატება 600C ბადაგიდან ორთქლის ინტენსიური გამოყოფის შედეგად, რაც ჰმფ-ს  წარმოქმნას უშლის ხელს. პროცესი დამთავრებულია, თუ ბადაგის კონცენტრაცია 80 მას.%-ზე ნაკლები არ არის. კონცენტრატი შენახვადია ბუნებრივ პირობებში, სტერილიზაციის გარეშე, უმჯობესია სინათლისაგან დაცულ ადგილას, გაზობრივი  აზოტის ან ნახშირორჟანგის არეში. ",
+      "paragraph4": " მშრალი ხილეულისგან დელიკატესის შიგა კომპონენტების მომზადება. ტენი მასში რეგულირდება 60-650C-ზე. შემდგომი ოპერაცია მოიცავს მის დაქუცმაცება- დაფქვას..მარცვლის ფქვილის ჰიდროლიზი, კონცენტრირება, დელიკატესის  მომზადება და კონდიცირება ტენის შემცველობის მიხედვით. მარცვლის ფქვილი წყალთან ერთად მზადდება ორტანიან ჭურჭელში ამრევით, 3:7- თან მასური შეფარდებით (მშრალი ნივთიერების გათვალისწინებით). α -ამილაზა ყოველ კგ ფქვილზე ემატება 300მგ-ის რაოდენობით, ნაზავის ტემპერატურას გამუდმებული მორევის პირობებში ზრდიან 84-860C-მდე,  ამ ტემპერატურაზე სახამებელს აცდიან გათხევადებას,  შემდგომ მას აცხელებენ  88-900C-მდე და იწყებენ ნარევის შესქელებას 80-850C-მდე  გაცხელებული ჰაერით. ამ პროცესის ბოლოს შესქელებული ჰიდროლიზატის კონცენტრაცია უნდა იყოს 43-45 მას.%. შემდგომ ჭურჭლის პერანგში არსებულ წყალს გააგრილებენ, რომ  ცომში იგი შემცირდეს 600C-მდე და ამატებენ კონცენტრირებულ ბადაგს  ფქვილის მზა ჰიდროლიზატის მასის 9-10%-ის რაოდენობით, ხოლო დაფქვილ მშრალ ხილეულს- 30%-ის რაოდენობით. ნარევი  გადააქვთ საშრობი კარადის შიგა, უჟანგავი ლითონის თაროებზე, გაძლიერებული აერაციის პირობებში. ამასთან  ნარევს პერიოდულად(საათში ერთხელ) გადააბრუნებენ პროცესის დასაჩქარებლად. შრობის ტემპერაქტურა არ აღემატება 55 0C-ს, პროდუქტის მუდმივ მასამდე დაყვანით, ხვედრითი მასა- არა ნაკლებ 1,32 გ/სმ3. შრობის  გამშრალ პროდუქტს გააგრილებენ, შეფუთავენ და ხდება მისი მარკირება.",
+      "paragraph5": "შემოთავაზებული ტექნოლოგიის უპირატესობანი: ეკოლოგიური სისუფთავე ( არ შეიცავს ჰმფ-ს და არ ხდება  მისი გამუქება-ფენოლური ნაერთების დაჟანგვა); ტრადიციულ ნამზადთან შედარებით დახარჯული სამუშაო  დრო 165 საათიდან მცირდება 28-30 საათამდე; უმჯობესდება სასაქონლო სახე (ფერი, სუნი, გემო, პლასტიკურობა) და ღონისძიების ეკონომიკური ეფექტი.გარდა ზემოთმოტანილი ინფორმაციისა, ავტორის მიერ დაინტერესებული მკითხველისათვის ინტერნეტში ქართულ, ინგლისურ და რუსულ ენებზე განთავსებულია მასალები შემდეგი ინოვაციური ღონისძიებების შესახებ:  ინვერსიული სიროფი ფუტკრისათვის; ინვერტაზა (საქარაზა, β -ფრუქტოფურანოზიდაზა) კომერციული სახელწოდებით „ჰიდროლიზ-აგენტი“; თაფლის ნატურალობის დადგენა (ექსპრესული მეთოდით);  კანდი- ცომისებური საკვები ფუტკრისათვის, მთლიანად მონოსაქარიდების შემცველობით;  ჭეოს ეკოლოგიურად სუფთა პროდუქტის წარმოება ყვავილის მტვრისგან სკის (ფიჭები) გარეშე;  მურაბებისა და ხილფაფების წარმოების ეკოლოგიურად უსაფრთხო ტექნოლოგია.",
+      "img1": "../../images/grape1.jpg",
       "img2": "../../images/grape2.png",
       "img3": "../../images/grape3.png",
-      "img4": "../../images/grape4.png",
-      "caption1": "ყურძნის ბადაგის კონცენტრირებული (78,5-81მას.%) ნიმუშები:  2-ახალი ტექნოლოგიით მიღებული,  3-დაჟანგული (ფერშეცვლილი)",
-      "caption2": "ტრადიციული ტექნოლოგიით მიღებული  (დადებითი)",
+      "img4": "../../images/almond.jpg",
+      "img5": "../../images/walnut.jpg",
+      "img6": "../../images/peanut.jpg",
+      "caption1": "ყურძნის ბადაგის კონცენტრატი",
+      "caption2": "ჰმფ-ს რეაქცია ტრადიციული ტექნოლოგიით მიღებულში (დადებითი)",
       "caption3": "ახალი ტექნოლოგიით დამზადებული  (უარყოფითი)",
-      "caption4": "ა)ტრადიციული  ტექნოლოგიით დამზადებული ჩურჩხელა; ბ)ახალი ტექნოლოგიით მომზადებული ნიმუში ",
+      "caption4": "დელიკატესი ნუშით",
+      "caption5": "დელიკატესი ნიგვზით",
+      "caption6": "დელიკატესი არაქისით",
       "alt1": "Cherry jam ",
       "alt2": "traditional technology ",
       "alt3": "new technology",
-      "alt4": "Churchkhela"
+      "alt4": "almond delicacy",
+      "alt5": "walnut delicacy",
+      "alt6": "peanut delicacy"
     }
   ]
 }
