--- a/src/translation/ru/translation.json
+++ b/src/translation/ru/translation.json
@@ -33,7 +33,7 @@
     },
     {
       "id": 19,
-      "navTitle": "Чурчхела"
+      "navTitle": "Грузинский деликатес"
     }
   ],
   "productDescription": [
@@ -81,9 +81,9 @@
     },
     {
       "id": 7,
-      "img": "../../images/churchkela.png",
-      "heading": "Чурчхела-грузинский деликатес",
-      "subheading": "улучшенная  технология производства",
+      "img": "../../images/walnut.jpg",
+      "heading": " Грузинский деликатес- улучшенная  технология производства  ",
+      "subheading": "(взамен традиционной чурчхелы)",
       "paragraph": "Характерные особенности:    В процессе производства предотвращено образование вредного вещества 5-гидроксиметилфурфураль (ГМф)  и окисление фенольных соединений (в отличие от традиционной технологии);  достигнуто ускоренное сгущение виноградного сока в низкотемпературном режиме и получение экологически чистого продукта при смешивании с гидролизатом пшеничной муки и последующей оптимизацией состава смеси;  сокращена общая продолжительность процесса со 165 до 28-30 часов ; улучшены экономические показатели производства…"
     }
   ],
@@ -165,6 +165,8 @@
       "paragraph4": "Преимущества  данного cпособа: дешевизна (в себестоимости сиропа пищевой сахар составляет  не менее 80-85%); в инвертном сиропе содержание 5-гидроксиметилфурфураля не превышает 5мг/кг,  в отличие от меда, в котором данный показатель составляет не менее 20 мг/ кг (в лучшем случае); инвертный сироп можно скармливать пчелам в любой сезон года,  не вызывая износ рабочих пчел; для промышленного производства сиропа нагрев разработанной нами установки  производится  как газом,  так и электроэнергией,  в зависимости от стоимости источника; источник β -фруктофуранозидазы представлен разработанным автором препаратом микробного происхождения, одна упаковка которого рассчитана на 50 кг сухого сахара,  а стоимость без транспортировки равна 2, 7$.Помимо вышеописанной информации автор для заинтересованных читателей на грузинском,  английском и русском языках в интернете разместил материалы о следующих инновационных мероприятиях:  Инвертаза (сахараза,   β -фруктофуранозидаза) с коммерческим названием “гидролиз- агент”;  натуральность меда – установление экспрессным методом;  канди – тестообразная подкормка;  перга – производство экологически чистого продукта вне улья (соторамок);  варенья и повидла-технология производства экологически чистой продукции;  чурчхела – грузинский деликатес – улучшенный способ приготовления.",
       "img1": "../../images/invertSugar1.png",
       "img2": "../../images/invertSugar.png",
+      "caption1": "Гидролизирующий агент",
+      "caption2": "Инвертпый сироп",
       "alt1": "hidroliz agent",
       "alt2": "invert sugar"
     },
@@ -179,7 +181,7 @@
       "paragraph4": "Применение готового гидролиз-агента  для приготовления жидкого инвертного  сиропа или тестообразной подкормки ( канди) для пчел  В зависимости от  этого рецептура готовых продуктов  и дозировка препарата различны,  что отражено в технологических инструкциях их приготовления.Помимо вышеописанной информации автор для заинтересованных читателей на грузинском,  английском и русском языках в интернете разместил материалы о следующих инновационных мероприятиях: Инвертный сироп для  пчел и для пищевых нужд;  натуральность меда – установление экспрессным методом;  канди – тестообразная подкормка для пчел;  перга – производство экологически чистого продукта вне улья ( соторамок);  варенья и повидла – технология производства экологически чистой продукции;  чурчхела – грузинский деликатес – улучшенный способ приготовления.",
       "img1": "../../images/invertase.jpg",
       "img2": "../../images/rotaryMixer.png",
-      "caption1": "Гидролизирующий агент",
+      "caption1": "нвертаза",
       "caption2": "ротационный миксер",
       "alt1": "Invertase",
       "alt2": "Rotary mixer"
@@ -235,7 +237,7 @@
       "caption2": " Перга",
       "caption3": "",
       "caption4": " Вакуум камера  с насосом",
-      "caption5": "",
+      "caption5": "Перга",
       "alt1": "Bee Pollen",
       "alt2": "Bee Bread",
       "alt3": "beepollen dryer",
@@ -274,25 +276,31 @@
 
     {
       "id": 40,
-      "title": " Способ промышленного производства экологически чистой чурчхелы",
+      "title": "Способ промышленного производства экологически чистого  деликатеса",
 
-      "paragraph1": "Материалы:  Виноград хорошо созревший,  без ощущения кислотности,  pH не ниже 4,  концентрация сока-не меньше 20 мас. %,  цвет-любой;  пшеничная или кукурузная мука 1 сорта  стандартной влажности (12-13%);   пищевые продукты (орехи,  миндаль,  изюм и др. )- внутренние компоненты чурчхелы стандартной влажности ( не более 8-10%),  собранные на нитке и с петлями для вешалок;  термостабильная α -амилаза с установленной активностью,  с приемлемым наполнителем или без,  устойчивая к температуре 84-860C;  серный ангидрид;    вода питьевая,  чистая.",
-      "paragraph2": "Оборудование:  Установки для отделения зерен винограда от вегетативной части и для отжима сока,  любой конструкции;  центрифуги для механической очистки сока от примесей;  отделение осадка от сока  воздействием серного ангидрида;  спаренные металлические котлы,  внутренний- из нержавеющей стали;  компрессор воздушный с фильтром  для очистки от масляного пара;  калорифер;  сушильный шкаф с усиленным воздухообменом и вешалками; рефрактометр; коробки для упаковки пищевых продуктов.  ",
-      "paragraph3": "Переработка виноградного сока.  Собранный виноград  моют,  давят и сок фильтруют,  удаляют осадок  сока, обрабатывая серным ангидридом,  сосуд наполняют соком на 4/5 объема и ставят на 1, 5 сутки;  чистый сок снимают декантацией в спаренные  котлы,  в котором теплоноситель в рубашке нагревают до 70-750C и обрабатывают сок  нагретым воздухом от компрессора.   Температура сока не должна превышать 600C в результате интенсивного парообразования,  что также препятствует образованию ГМФ.  Процесс закончен,  если концентрация сока не менее 80 мас. %,  он хранится в естественных условиях без стерилизации,  в темноте,  лучше в среде газообразного азота или углекислого газа. ",
-      "paragraph4": "Подготовка изделия для чурчхелы.  Его готовят из сухофруктов,  влажность в которых регулируют  в сушильном шкафу при 60-650C  или сушкой в вакууме.  В последующем процессе (сбор материала на нитках)  соблюдают нужные габариты ( длина и  диаметр) изделия.",
-      "paragraph5": "Гидролиз зерновой муки,  концентрирование,  подготовка чурчхелы и сушка.  Зерновая мука вместе с водой готовится в спаренных  котлах со смесителем, в соотношении ингредиентов 3: 7 по массе,  учитывая сухой остаток.  α -амилаза добавляется в суспензию на каждый кг муки в количестве 300мг . При постоянном перемешивании суспензию нагревают до 84-860C,   в промежутке времени, достигая  осахаривания крахмала,  температуру раствора увеличивают до 88-900C и концентрируют раствор нагретым воздухом от компрессора  до 43-45 мас. % по  рефрактометру.  Затем теплоноситель (вода) в межстенном пространстве охлаждают( до 600C в гидролизате муки),  вводят в него концентрат виноградного сока в количестве 9-10% от массы гидролизата муки.  Концентрацию этой смеси оценивают  морфологической стойкостью погруженной в него собранных на нитке сухофруктов (после изъятия).  Далее этот продукт охлаждают и подвешивают на вешалки сушильного шкафа,  сушат изделие поэтапно-начиная с 20 до 40-450C  до постоянной массы.  На последнюю операцию уходит  до 15 часов.  Затем высушенную чурчхелу  охлаждают,  упаковывают в коробки и после маркировки она подлежит реализации.Преимущества предлагаемой технологии:  Экологическая чистота - не содержит  ГМФ и не отмечается потемнение( результат  окисления фенольных соединений);  весьма существенное снижение  затрат рабочего времени на изготовление ( со 165 до 30 часов)  в сравнении с традиционной технологией ; улучшение товарного вида ( окраска,  запах,  вкус,  пластичность) продукта и рост экономического эффекта мероприятия на 25-30%.Помимо вышеописанной информации автор для заинтересованных читателей на грузинском,  английском и русском языках  разместил в интернет материалы о следующих инновационных мероприятиях:  Инвертный сироп для пчел и для пищевых нужд;  инвертаза (сахараза, β   -фруктофуранозидаза) с коммерческим названием “ гидролиз-агент”;   натуральность меда – экспрессный метод установления;  канди – тестообразная подкормка для пчел;  перга – производство экологически чистого продукта вне улья (соторамок);  варенья и повидла – технология производства экологически чистой продукции;  чурчхела – грузинский деликатес – улучшенный способ приготовления.",
-      "img1": "../../images/grape1.png",
+      "paragraph1": "Материалы:  Виноград хорошо созревший,  без ощущения кислотности,  pH не ниже 4,  концентрация сока-не меньше 20 мас. %,  цвет-любой;  пшеничная или кукурузная мука   стандартной влажности (12-13%);  диспергированные  пищевые продукты (орехи,  миндаль,  арахис и др. )  стандартной влажности ( не более 8-10%), ;    термостабильная α -амилаза с установленной активностью,  с приемлемым наполнителем или без,  устойчивая к температуре 84-860C;  серный ангидрид;    вода питьевая,  чистая.",
+      "paragraph2": "Оборудование:  Установка для отделения плодов винограда от вегетативной части и для отжима сока,  любой конструкции;  центрифуга для механической очистки сока от примесей;  отделение осадка от сока  воздействием серного ангидрида;  спаренные металлические котлы,  внутренний- из нержавеющей стали;  компрессор воздушный с фильтром  для очистки от масляного пара;  калорифер;  сушильный шкаф с усиленным воздухообменом и противнями из нержавеющей стали; рефрактометр; банки стеклянные или из пищевой пластмассы прозрачные, с  плотно закрывающиеся пробками . ",
+      "paragraph3": "Переработка виноградного сока.  Собранный виноград  моют,  прессуют и сок фильтруют,  удаляют осадок  сока, обрабатывая серным ангидридом,  сосуд наполняют соком на 4/5 объема и ставят на 1, 5 сутки;  чистый сок снимают декантацией в спаренные  котлы,  в котором теплоноситель в рубашке нагревают до 70-750C и обрабатывают сок  нагретым воздухом от компрессора.   Температура сока не должна превышать 600C при  интенсивном парообразовании,  что также препятствует образованию ГМФ.  Процесс закончен,  когда концентрация сока составит не менее 80 мас. %,  он хранится в естественных условиях без стерилизации,  в темноте,  лучше в среде газообразного азота или углекислого газа.",
+      "paragraph4": "Подготовка изделия для деликатеса.  Его готовят из сухофруктов,  влажность в которых регулируют  в сушильном шкафу при 60-650C  или сушкой в вакууме.  В последующем процессе материал подвергают дроблению (помолу).Гидролиз зерновой муки,  концентрирование,  подготовка деликатеса и его кондицирование по влажности.  Зерновая мука смешивается с водой  в спаренных  котлах со смесителем, в соотношении ингредиентов 3: 7 по массе,  учитывая сухой остаток.  α -амилаза добавляется в суспензию на каждый кг муки в количестве 300мг . При постоянном перемешивании суспензию нагревают до 84-860C,   в промежутке времени, достигая  осахаривания крахмала,  температуру раствора увеличивают до 88-900C и концентрируют раствор нагретым воздухом от компрессора  до 43-45 мас. % по  рефрактометру.  Затем теплоноситель (вода) в межстенном пространстве охлаждают( до 600C в гидролизате муки),  вводят в него концентрат виноградного сока в количестве 9-10% от массы гидролизата муки и молотые сухофрукты  в количестве 30% от массы конечного продукта  Полученную смесь переносят на противни сушильного шкафа и  при периодическом переворачивании при    55 0C подвергают сушке до постоянной массы.  Влажность готового продукта не должна превышать 15 мас%, удельная масса –не менее 1, 32 г / см3 . Затем высушенный деликатес  охлаждают,  упаковывают в баночки  и после маркировки она подлежит реализации.",
+      "paragraph5": "Преимущества предлагаемой технологии:  Экологическая чистота - не содержит  ГМФ и не отмечается потемнение( результат  окисления фенольных соединений);  весьма существенное снижение  затрат рабочего времени на изготовление ( со 165 до 30 часов)  в сравнении с традиционной технологией ; улучшение товарного вида ( окраска,  запах,  вкус,  пластичность) продукта и рост экономического эффекта мероприятия на 25-30% (ориентировочно).Помимо вышеописанной информации автор для заинтересованных читателей на грузинском,  английском и русском языках  разместил в интернет материалы о следующих инновационных мероприятиях:  Инвертный сироп для пчел и для пищевых нужд;  инвертаза (сахараза, β   -фруктофуранозидаза) с коммерческим названием “ гидролиз-агент”;   натуральность меда – экспрессный метод установления;  канди – тестообразная подкормка для пчел,  состоящая исключительно из моносахаридов;  перга – производство экологически чистого продукта из цветочной пыльцы вне улья (соторамок);  варенья и повидла – технология производства экологически чистой продукции.",
+      "img1": "../../images/grape1.jpg",
       "img2": "../../images/grape2.png",
       "img3": "../../images/grape3.png",
-      "img4": "../../images/grape4.png",
+      "img4": "../../images/almond.jpg",
+      "img5": "../../images/walnut.jpg",
+      "img6": "../../images/peanut.jpg",
       "caption1": "Концентрированные (78,5-81% по массе) пробы виноградного сусла: 2-новой технологии, 3-оксидированные (обесцвеченные)",
-      "caption2": "Получено по традиционной технологии (положительный)",
-      "caption3": "Сделано по новой технологии (негатив)",
-      "caption4": "чурчхела выполненная по традиционной технологии; б) Образей, приготовленный по новой технологии.",
+      "caption2": "Содержание ГМФ В продукте традиционного состава (положительный)",
+      "caption3": "Содержание ГМФ  по новой продукте (негатив)",
+      "caption4": "Деликатес с миндалем",
+      "caption5": "Деликатес с грецкими орехами",
+      "caption6": "Деликатес с недревесными добавками",
       "alt1": "Cherry jam ",
       "alt2": "traditional technology ",
       "alt3": "new technology",
-      "alt4": "Churchkhela"
+      "alt4": "almond delicacy",
+      "alt5": "walnut delicacy",
+      "alt6": "peanut delicacy"
     }
   ]
 }
